objects/pi__ObjectChangeLog__c.object
<CustomObject>
    <fields>
        <fullName>pi__ObjectEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Email</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__ObjectFid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Fid</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__ObjectMasterRecordEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Master Record Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__ObjectMasterRecordId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Master Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__ObjectState__c</fullName>
        <label>Object State</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__ObjectType__c</fullName>
        <label>Object Type</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>